# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/lib1/: CMakeLists.txt
src/lib2/: CMakeLists.txt
src/prog1/: CMakeLists.txt  main.cpp
src/prog2/: CMakeLists.txt  main.cpp
